--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,8 +3,8 @@ set-option -g default-command "reattach-to-user-namespace -l fish"
 set -g history-limit 99999
 
 bind N previous-window
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
 
 # vi buffers
 setw -g mode-keys vi
@@ -12,8 +12,8 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # reduce delay
 set -sg escape-time 1
