Update tmux status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -45,23 +45,23 @@ bind -r L resize-pane -R 5
 # color
 set -g default-terminal "screen-256color"
 set -g status-fg black
-set -g status-bg green
+set -g status-bg colour8
 
-setw -g window-status-fg default
-setw -g window-status-bg default
+setw -g window-status-bg colour244
 setw -g window-status-attr dim
-setw -g window-status-current-bg white
+setw -g window-status-current-bg colour255
 setw -g window-status-current-attr bright
 
 setw -g monitor-activity off
 set -g visual-activity off
 
-setw -g window-status-format " #I:#W "
-setw -g window-status-current-format " #I:#W "
+setw -g window-status-format "  #I  #W   "
+setw -g window-status-current-format "  #I  #W   "
 
 # status bar
 set -g status-utf8 on
 set -g status-position top
-set -g status-right ""
 set -g status-left " #S "
+set -g status-left-fg colour255
 set -g status-justify left
+set -g status-right ""
