--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,3 @@
-set-option -g default-command "reattach-to-user-namespace -l fish"
 
 set -g history-limit 99999
 
@@ -13,7 +12,7 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy y copy-pipe "pbcopy"
 
 # reduce delay
 set -sg escape-time 1
