--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,6 @@
+set -g prefix C-a
+bind a send-prefix
+unbind C-b
 
 set -g history-limit 99999
 
@@ -43,8 +46,6 @@ bind -r L resize-pane -R 5
 
 # color
 set -g default-terminal "screen-256color"
-set -g status-fg black
-set -g status-bg colour8
 
 setw -g window-status-bg colour244
 setw -g window-status-attr dim
@@ -54,12 +55,15 @@ setw -g window-status-current-attr bright
 setw -g monitor-activity off
 set -g visual-activity off
 
-setw -g window-status-format "  #I  #W   "
-setw -g window-status-current-format "  #I  #W   "
+setw -g window-status-format "    #I  #W     "
+setw -g window-status-current-format "    #I  #W     "
 
 # status bar
 set -g status-utf8 on
 set -g status-position top
+set -g status-fg black
+set -g status-bg black
+set -g status-left-bg black
 set -g status-left " #S "
 set -g status-left-fg colour255
 set -g status-justify left
