--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,9 +24,6 @@ set -sg escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
-# reload config
-bind r source-file ~/.tmux.conf
-
 # split panes
 bind v split-window -h
 bind s split-window -v
@@ -47,9 +44,10 @@ bind -r L resize-pane -R 5
 # color
 set -g default-terminal "screen-256color"
 
-setw -g window-status-bg colour244
+setw -g window-status-bg white
 setw -g window-status-attr dim
-setw -g window-status-current-bg colour255
+setw -g window-status-current-bg black
+setw -g window-status-current-fg white
 setw -g window-status-current-attr bright
 
 setw -g monitor-activity off
@@ -62,9 +60,10 @@ setw -g window-status-current-format "    #I  #W     "
 set -g status-utf8 on
 set -g status-position top
 set -g status-fg black
-set -g status-bg black
-set -g status-left-bg black
+set -g status-bg white
+set -g status-left-bg white
 set -g status-left " #S "
-set -g status-left-fg colour255
+set -g status-left-fg black
+set -g status-left-attr bright
 set -g status-justify left
 set -g status-right ""
