Update git email

--- a/git/config
+++ b/git/config
@@ -1,6 +1,6 @@
 [user]
   name = Marcos Acosta
-  email = marcos@acosta.tv
+  email = m@mmaa.co
 [core]
   excludesfile = /Users/mmaa/.gitignore
   quotepath = false
