--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,10 +59,14 @@ setw -g window-status-current-format "    #I  #W     "
 # status bar
 set -g status-utf8 on
 set -g status-position top
+set -g status-justify left
+
 set -g status-fg black
 set -g status-bg white
+
+set -g status-left-length 20
 set -g status-left " #S "
 set -g status-left-bg white
 set -g status-left-attr bright
-set -g status-justify left
+
 set -g status-right ""
