Tweak tmux status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,7 +57,6 @@ setw -g window-status-format "    #I  #W     "
 setw -g window-status-current-format "    #I  #W     "
 
 # status bar
-set -g status-utf8 on
 set -g status-position top
 set -g status-justify left
 
@@ -65,7 +64,7 @@ set -g status-fg black
 set -g status-bg white
 
 set -g status-left-length 20
-set -g status-left " #S "
+set -g status-left " #S: "
 set -g status-left-bg white
 set -g status-left-attr bright
 
