Pass tmux title through to shell

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,9 @@ unbind C-b
 
 set -g history-limit 99999
 
+set-option -g set-titles on
+set-option -g set-titles-string "#T"
+
 bind N previous-window
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
