--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,8 +20,8 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "pbcopy"
+bind -Tcopy-mode-vi v send -X begin-selection
+bind -Tcopy-mode-vi y send -X copy-pipe "pbcopy"
 
 # reduce delay
 set -sg escape-time 1
