--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -4,35 +4,39 @@
 # environment variables. Some entries may override variables
 # set by alacritty it self.
 env:
-  # TERM env customization. Default is xterm-256color
-  # Note: the default TERM value `xterm-256color` does not
-  # specify all features alacritty supports. This does pose
-  # a few issues with programs relying on terminfo and the
-  # `tput` command
+  # TERM env customization.
+  #
+  # If this property is not set, alacritty will set it to xterm-256color.
+  #
+  # Note that some xterm terminfo databases don't declare support for italics.
+  # You can verify this by checking for the presence of `smso` and `sitm` in
+  # `infocmp xterm-256color`.
   TERM: xterm-256color
 
 # Window dimensions in character columns and lines
 # (changes require restart)
 dimensions:
-  columns: 180
-  lines: 55
+  columns: 140
+  lines: 46
+
+# Adds this many blank pixels of padding around the window
+# Units are physical pixels; this is not DPI aware.
+# (change requires restart)
+padding:
+  x: 8
+  y: 4
 
 # The FreeType rasterizer needs to know the device DPI for best results
 # (changes require restart)
 dpi:
-  # internal
-  # x: 96.0
-  # y: 96.0
-
-  # external
-  x: 54.0 #108.79
-  y: 54.0 #108.79
+  x: 91.79
+  y: 91.79
 
 # Display tabs using this many cells (changes require restart)
 tabspaces: 4
 
 # When true, bold text is drawn using the bright variant of colors.
-draw_bold_text_with_bright_colors: true
+draw_bold_text_with_bright_colors: false
 
 # Font configuration (changes require restart)
 font:
@@ -55,22 +59,25 @@ font:
     # style: Italic
 
   # Point size of the font
-  size: 14.0
+  size: 12.0
+
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
   offset:
     x: 0.0
     y: 0.0
 
+  # Glyph offset determines the locations of the glyphs within their cells with
+  # the default being at the bottom. Increase the x offset to move the glyph to
+  # the right, increase the y offset to move the glyph upward.
+  glyph_offset:
+    x: 0.0
+    y: 0.0
+
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
   # for retina displays, but for non-retina you probably want this set to
   # false.
-
-  # internal
   use_thin_strokes: true
-
-  # external
-  # use_thin_strokes: false
 
 # Should display the render timer
 render_timer: false
@@ -79,12 +86,46 @@ render_timer: false
 # and cursor.background colors, otherwise invert the colors of the cursor.
 custom_cursor_colors: false
 
-# Colors (Solarized Dark)
+# # Colors (Solarized Dark)
+# colors:
+#   # Default colors
+#   primary:
+#     background: '0x002b36'
+#     foreground: '0x839496'
+
+#   # Colors the cursor will use if `custom_cursor_colors` is true
+#   cursor:
+#     text: '0x000000'
+#     cursor: '0xffffff'
+
+#   # Normal colors
+#   normal:
+#      black:   '0x073642'
+#      red:     '0xdc322f'
+#      green:   '0x859900'
+#      yellow:  '0xb58900'
+#      blue:    '0x268bd2'
+#      magenta: '0xd33682'
+#      cyan:    '0x2aa198'
+#      white:   '0xeee8d5'
+
+#   # Bright colors
+#   bright:
+#      black:   '0x002b36'
+#      red:     '0xcb4b16'
+#      green:   '0x586e75'
+#      yellow:  '0x657b83'
+#      blue:    '0x839496'
+#      magenta: '0x6c71c4'
+#      cyan:    '0x93a1a1'
+#      white:   '0xfdf6e3'
+
+# Colors (Solarized Light)
 colors:
   # Default colors
   primary:
-    background: '0x002b36'
-    foreground: '0x839496'
+    background: '0xfdf6e3'
+    foreground: '0x657b83'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
@@ -93,10 +134,10 @@ colors:
 
   # Normal colors
   normal:
-     black:   '0x073642'
+     black:   '0x003541'
      red:     '0xdc322f'
-     green:   '0x859900'
-     yellow:  '0xb58900'
+     green:   '0x859901'
+     yellow:  '0xb58901'
      blue:    '0x268bd2'
      magenta: '0xd33682'
      cyan:    '0x2aa198'
@@ -104,12 +145,12 @@ colors:
 
   # Bright colors
   bright:
-     black:   '0x002b36'
+     black:   '0x002833'
      red:     '0xcb4b16'
      green:   '0x586e75'
      yellow:  '0x657b83'
      blue:    '0x839496'
-     magenta: '0x6c71c4'
+     magenta: '0x6c6ec6'
      cyan:    '0x93a1a1'
      white:   '0xfdf6e3'
 
@@ -214,8 +255,7 @@ key_bindings:
   - { key: Back,                    chars: "\x7f"                        }
   - { key: Back,     mods: Alt,     chars: "\x1b\x7f"                    }
   - { key: Insert,                  chars: "\x1b[2~"                     }
-  - { key: Delete,                  chars: "\x1b[3~",  mode: AppKeypad   }
-  - { key: Delete,                  chars: "\x1b[P",   mode: ~AppKeypad  }
+  - { key: Delete,                  chars: "\x1b[3~"                     }
 
 # Mouse bindings
 #
