--- a/git/config
+++ b/git/config
@@ -5,6 +5,7 @@
   excludesfile = /Users/mmaa/.gitignore
   quotepath = false
   editor = nvim
+  pager = diff-so-fancy | less --tabs=2 -RFX
 [color]
   ui = always
 [color "diff-highlight"]
@@ -42,9 +43,10 @@
   smudge = git hawser smudge %f
   required = true
 [filter "lfs"]
-  clean = git lfs clean %f
-  smudge = git lfs smudge %f
-  required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
 [commit]
   verbose = true
 [interactive]
