--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,7 +50,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # color
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 setw -g window-status-bg white
 setw -g window-status-attr dim
