--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,10 +1,11 @@
-dimensions:
-  columns: 180
-  lines: 80
-
-padding:
-  x: 8
-  y: 4
+window:
+  decorations: true
+  dimensions:
+    columns: 180
+    lines: 80
+  padding:
+    x: 8
+    y: 4
 
 tabspaces: 4
 
@@ -30,7 +31,6 @@ colors:
   primary:
     background: '0xfdf6e3'
     foreground: '0x657b83'
-
   normal:
      black:   '0x003541'
      red:     '0xdc322f'
@@ -40,7 +40,6 @@ colors:
      magenta: '0xd33682'
      cyan:    '0x2aa198'
      white:   '0xeee8d5'
-
   bright:
      black:   '0x002833'
      red:     '0xcb4b16'
