--- a/ssh/config
+++ b/ssh/config
@@ -24,59 +24,48 @@ Host pi-hole.local
 ### ShippingEasy
 
 # Always use agent forwarding when connecting to bastions
-Host *-bastion.aws.seadmin.com
+Host bastion.aws.seadmin.com
+  User macosta
   ForwardAgent yes
   HostKeyAlias shippingeasy-bastions
   StrictHostKeyChecking yes
   UserKnownHostsFile ~/.ssh/known_hosts
 
-# Environments
-Host *.production-*.*.aws.seadmin.com
-  ProxyJump production-bastion.aws.seadmin.com
-
-Host *.staging-*.*.aws.seadmin.com
-  ProxyJump staging-bastion.aws.seadmin.com
-
-Host *.slush-staging.*.aws.seadmin.com
-  ProxyJump slush-staging-bastion.aws.seadmin.com
-
-Host *.slush-master.*.aws.seadmin.com
-  ProxyJump slush-master-bastion.aws.seadmin.com
-
 # Defaults
-Host *aws.seadmin.com
+Host *aws.seadmin.com !bastion.aws.seadmin.com !bastion*
   User macosta
+  ProxyJump bastion.aws.seadmin.com
   StrictHostKeyChecking no
-
-  # Do not verify/store host keys for cloud instances
   UserKnownHostsFile /dev/null
-
-  # Suppress "Permanently added <host>" warning on every connection caused by
-  # preceding line
   LogLevel error
 
 # Aliases
 Host stg1
   User macosta
-  HostName shipit-scheduler-i-0999f98a58787e03d.staging-shard1.us-west-2.aws.seadmin.com
-  ProxyJump staging-bastion.aws.seadmin.com
+  HostName shipit-scheduler-i-093b1d05796cbd066.staging-shard1.us-west-2.aws.seadmin.com
+  ProxyJump bastion.aws.seadmin.com
 
 Host stg2
   User macosta
-  HostName shipit-scheduler-i-0796346ab9edac3c0.staging-shard2.us-west-1.aws.seadmin.com
-  ProxyJump staging-bastion.aws.seadmin.com
+  HostName shipit-scheduler-i-0d540c54bde2f096a.staging-shard2.us-west-1.aws.seadmin.com
+  ProxyJump bastion.aws.seadmin.com
+
+Host slush
+  User macosta
+  HostName shipit-scheduler-i-048ca28edd1e309d9.slush-staging.us-east-2.aws.seadmin.com
+  ProxyJump bastion.aws.seadmin.com
 
 Host se1
   User macosta
   HostName shipit-scheduler-i-00accd0afa35a4189.production-shard1.us-west-2.aws.seadmin.com
-  ProxyJump production-bastion.aws.seadmin.com
+  ProxyJump bastion.aws.seadmin.com
 
 Host se2
   User macosta
   HostName shipit-scheduler-i-0fb503a062daac8b2.production-shard2.us-west-1.aws.seadmin.com
-  ProxyJump production-bastion.aws.seadmin.com
+  ProxyJump bastion.aws.seadmin.com
 
 Host se3
   User macosta
   HostName shipit-scheduler-i-043a57aa885813dfd.production-shard3.us-east-2.aws.seadmin.com
-  ProxyJump production-bastion.aws.seadmin.com
+  ProxyJump bastion.aws.seadmin.com
