--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,19 +61,18 @@ setw -g window-status-current-attr bright
 setw -g monitor-activity off
 set -g visual-activity off
 
-setw -g window-status-format "     #I  #W     "
-setw -g window-status-current-format "     #I  #W     "
+setw -g window-status-format "      #I  #W      "
+setw -g window-status-current-format "      #I  #W      "
 
-# status bar
 set -g status-position top
 set -g status-justify left
 
 set -g status-fg black
 set -g status-bg white
 
-set -g status-left-length 32
-set -g status-left " #S: "
-set -g status-left-bg white
-set -g status-left-attr bright
+set -g status-left ""
 
-set -g status-right ""
+set -g status-right "  #S  "
+set -g status-right-fg white
+set -g status-right-attr bright
+set -g status-right-bg black
