Update tmux status

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -72,7 +72,6 @@ set -g status-bg white
 
 set -g status-left ""
 
-set -g status-right "  #S  "
-set -g status-right-fg white
+set -g status-right " #S "
+set -g status-right-fg black
 set -g status-right-attr bright
-set -g status-right-bg black
