--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -52,34 +52,18 @@ bind -r L resize-pane -R 5
 # color
 set -g default-terminal "tmux-256color"
 
-# setw -g window-status-bg white
-# setw -g window-status-attr dim
-# setw -g window-status-current-bg black
-# setw -g window-status-current-fg white
-# setw -g window-status-current-attr bright
-setw -g window-status-bg black
-setw -g window-status-attr dim
-setw -g window-status-current-bg colour251
-setw -g window-status-current-fg black
-setw -g window-status-current-attr bright
-
 setw -g monitor-activity off
 set -g visual-activity off
 
-setw -g window-status-format "      #I  #W      "
-setw -g window-status-current-format "      #I  #W      "
+setw -g window-status-format "#[bg=black,dim]      #I  #W      "
+setw -g window-status-current-format "#[bg=colour251,fg=black,bright]      #I  #W      "
 
 set -g status-position top
 set -g status-justify left
 
-# set -g status-fg black
-# set -g status-bg white
-set -g status-fg colour251
-set -g status-bg black
+set -g status-style fg=colour251
+set -g status-style bg=black
 
 set -g status-left ""
 
-set -g status-right " #S "
-# set -g status-right-fg black
-set -g status-right-fg colour251
-set -g status-right-attr bright
+set -g status-right "#[fg=colour251,bright] #S "
