--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,10 +1,9 @@
 window:
-  decorations: true
   dimensions:
-    columns: 180
-    lines: 80
+    columns: 160
+    lines: 60
   padding:
-    x: 8
+    x: 4
     y: 4
 
 tabspaces: 4
@@ -12,20 +11,22 @@ tabspaces: 4
 draw_bold_text_with_bright_colors: false
 
 font:
-  size: 13.0
-  use_thin_strokes: true
+  size: 14.0
   offset:
-    x: 0.0
-    y: 4.0
+    x: 0
+    y: 3
   glyph_offset:
-    x: 0.0
-    y: 2.0
+    x: 0
+    y: 2
   normal:
-    family: Consolas
+    family: "IBM Plex Mono"
+    style: "Regular"
   bold:
-    family: Consolas
+    family: "IBM Plex Mono"
+    style: "Medium"
   italic:
-    family: Consolas
+    family: "IBM Plex Mono"
+    style: "Regular Italic"
 
 colors:
   primary:
