--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,15 +55,15 @@ set -g default-terminal "tmux-256color"
 setw -g monitor-activity off
 set -g visual-activity off
 
-setw -g window-status-format "#[bg=black,dim]      #I  #W      "
-setw -g window-status-current-format "#[bg=colour251,fg=black,bright]      #I  #W      "
+setw -g window-status-format "#[bg=white,dim]      #I  #W      "
+setw -g window-status-current-format "#[bg=black,fg=white,bright]      #I  #W      "
 
 set -g status-position top
 set -g status-justify left
 
-set -g status-style fg=colour251
-set -g status-style bg=black
+set -g status-style fg=black
+set -g status-style bg=white
 
 set -g status-left ""
 
-set -g status-right "#[fg=colour251,bright] #S "
+set -g status-right "#[fg=black,bright] #S "
