--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 set -g default-shell $SHELL
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 set -g prefix C-a
 bind a send-prefix
@@ -55,15 +55,15 @@ set -g default-terminal "tmux-256color"
 setw -g monitor-activity off
 set -g visual-activity off
 
-setw -g window-status-format "#[bg=white,dim]      #I  #W      "
-setw -g window-status-current-format "#[bg=black,fg=white,bright]      #I  #W      "
+setw -g window-status-format "#[bg=black,fg=white,dim]      #I  #W      "
+setw -g window-status-current-format "#[bg=white,fg=black,bright]      #I  #W      "
 
 set -g status-position top
 set -g status-justify left
 
-set -g status-style fg=black
-set -g status-style bg=white
+set -g status-style fg=white
+set -g status-style bg=black
 
 set -g status-left ""
 
-set -g status-right "#[fg=black,bright] #S "
+set -g status-right "#[bg=black,fg=white] #S "
