--- a/ssh/config
+++ b/ssh/config
@@ -47,7 +47,7 @@ Host stg1
 
 Host stg2
   User macosta
-  HostName shipit-scheduler-i-063e66bb16caca257.staging-shard2.us-west-1.aws.seadmin.com
+  HostName shipit-scheduler-i-0a326546067f5905d.staging-shard2.us-east-2.aws.seadmin.com
   ProxyJump bastion.aws.seadmin.com
 
 Host slush-a
@@ -62,7 +62,7 @@ Host se1
 
 Host se2
   User macosta
-  HostName shipit-scheduler-i-065eb296dc6dd9c7f.production-shard2.us-west-1.aws.seadmin.com
+  HostName shipit-scheduler-i-0ecbebded02c1fbba.production-shard2.us-west-2.aws.seadmin.com
   ProxyJump bastion.aws.seadmin.com
 
 Host se3
